@@ -9,34 +9,68 @@ use Message::Util::QName::General [qw/ExpandedURI/], {
 };
 use Message::DOM::ManakaiDOMLS2003;
 use Message::DOM::DOMLS qw/MODE_SYNCHRONOUS/;
+use Getopt::Long;
 
-my $Method = {
-  qw/createEntityReference 1
-     createTextNode 1
-     getAttributeNode 1
-     getElementsByTagName 1
-     getNamedItem 1
-     removeChild 1
-     replaceChild 1/
-};
-my $Attr = {
-  qw/attributes 1
-     firstChild 1
-     item 1
-     nodeName 1
-     specified 1/
-};
+require 'dommemlist.pl.tmp'; ## Generated by mkdommemlist.pl
+
+my $output_filename;
+my $output_file;
+GetOptions (
+  'output-file=s' => \$output_filename,
+);
+if (defined $output_filename) {
+  open $output_file, '>', $output_filename or die "$0: $output_filename: $!";
+} else {
+  $output_file = \*STDOUT;
+}
+
+our $Method; 
+our $Attr;
+our $MethodParam;
 my $Assert = {
   qw/assertDOMException 1
+     assertFalse 1
      assertNotNull 1
+     assertNull 1
      assertTrue 1/
 };
 my $Misc = {
-  qw/var 1/
+  qw/if 1
+     implementationAttribute 1
+     var 1/
+};
+my $Condition = {
+  qw/condition 1
+     contains 1
+     contentType 1
+     hasSize 1
+     implementationAttribute 1
+     not 1
+     notNull 1
+     or 1/
 };
 
-my $Status;
-our $result = '';
+my $Status = {Number => 0, our => {Info => 1}};
+
+## Defined in genlib.pl but redefined.
+sub output_result ($) {
+  print $output_file shift;
+}
+
+sub to_perl_value ($;%) {
+  my ($s, %opt) = @_;
+  if (defined $s) {
+    if ($s =~ /^(?!\d)\w+$/) {
+      return perl_var (type => '$', local_name => $s);
+    } else {
+      return $s;
+    }
+  } elsif (defined $opt{default}) {
+    return $opt{default};
+  } else {
+    return '';
+  }
+}
 
 sub body2code ($) {
   my $parent = shift;
@@ -68,21 +102,73 @@ sub body2code ($) {
   $result;
 }
 
+sub condition2code ($;%) {
+  my ($parent, %opt) = @_;
+  my $result = '';
+  my @result;
+  my $children = $parent->childNodes;
+  for (my $i = 0; $i < $children->length; $i++) {
+    my $child = $children->item ($i);
+    if ($child->nodeType == $child->ELEMENT_NODE) {
+      my $ln = $child->localName;
+      if ($Condition->{$ln}) {
+        push @result, node2code ($child);
+      } else {
+        valid_err q<Unknown element type: >.$child->localName,
+          node => $child;
+      }
+    } elsif ($child->nodeType == $child->COMMENT_NODE) {
+      $result .= perl_comment $child->data;
+    } elsif ($child->nodeType == $child->TEXT_NODE) {
+      if ($child->data =~ /\S/) {
+        valid_err q<Unknown character data: >.$child->data,
+          node => $child;
+      }
+    } else {
+      valid_err q<Unknown type of node: >.$child->nodeType,
+        node => $child;
+    }
+  }
+  $result .= join (($opt{join}||='or' eq 'or' ? ' || ' : 
+                    $opt{join} eq 'and' ? ' && ' : 
+                    valid_err q<Multiple condition not supported>,
+                      node => $parent),
+                   map {"($_)"} @result);
+  $result;
+} #condition2code
+
+sub node2code ($);
 sub node2code ($) {
   my $node = shift;
   my $result = '';
+  if ($node->nodeType != $node->ELEMENT_NODE) {
+    if ($node->nodeType == $node->COMMENT_NODE) {
+      $result .= perl_comment $node->data;
+    } elsif ($node->nodeType == $node->TEXT_NODE) {
+      if ($node->data =~ /\S/) {
+        valid_err q<Unknown character data: >.$node->data,
+          node => $node;
+      }
+    } else {
+      valid_err q<Unknown type of node: >.$node->nodeType,
+        node => $node;
+    } 
+    return $result;
+  }
   my $ln = $node->localName;
 
   if ($ln eq 'var') {
-      $result .= perl_statement
+    my $name = $node->getAttributeNS (undef, 'name');
+    $result .= perl_statement
                    perl_var
-                     local_name => $node->getAttributeNS (undef, 'name'),
+                     local_name => $name,
                      scope => 'my',
                      type => '$';
-      if ($node->getAttributeNS (undef, 'value')) {
-        valid_err q<Attribute "value" not supported>, node => $node;
-      }
-    } elsif ($ln eq 'load') {
+    if ($node->getAttributeNS (undef, 'value')) {
+      valid_err q<Attribute "value" not supported>, node => $node;
+    }
+    $Status->{var}->{$name}->{type} = $node->getAttributeNS (undef, 'type');
+  } elsif ($ln eq 'load') {
       $result .= perl_statement
                    perl_assign
                      perl_var 
@@ -99,39 +185,81 @@ sub node2code ($) {
       $result .= perl_var (type => '$',
                            local_name => $node->getAttributeNS (undef, 'obj')).
               '->'.$ln.' ('.
-                ## TODO: parameters
+                join (', ',
+                     map {
+                       to_perl_value ($node->getAttributeNS (undef, $_),
+                                      default => 'undef')
+                     } @{$Method->{$ln}}).
               ");\n";
     } elsif ($Attr->{$ln}) {
       if ($node->hasAttributeNS (undef, 'var')) {
         $result .= perl_var (type => '$',
                              local_name => $node->getAttributeNS (undef, 'var')).
                    ' = ';
+      } elsif ($node->hasAttributeNS (undef, 'value')) {
+        #
       } else {
-        impl_err q<Attr set>;
+        valid_err q<Unknown operation to an attribute>, node => $node;
       }
       $result .= perl_var (type => '$',
                            local_name => $node->getAttributeNS (undef, 'obj')).
               '->'.$ln;
       if ($node->hasAttributeNS (undef, 'var')) {
         $result .= ";\n";
+      } elsif ($node->hasAttributeNS (undef, 'value')) {
+        $result .= " (".to_perl_value ($node->getAttributeNS (undef, 'value')).
+                   ");\n";
       }
-    } elsif ($ln eq 'assertTrue') {
+    } elsif ($ln eq 'assertEquals') {
+      my $expected = $node->getAttributeNS (undef, 'expected');
+      my $expectedType = $Status->{var}->{$expected}->{type} || '';
+      $result .= 'assertEquals'.
+                 ({Collection => 'Collection',
+                   List => 'List'}->{$expectedType}||'');
+      my $ignoreCase = $node->getAttributeNS (undef, 'ignoreCase') || 'false';
+      if ($ignoreCase eq 'auto') {
+        $result .= 'AutoCase ('.
+                   perl_literal ($node->getAttributeNS (undef, 'context') ||
+                                 'element').
+                   ', ';
+      } else {
+        $result .= ' (';
+      }
+      $result .= perl_literal ($node->getAttributeNS (undef, 'id')).', ';
+      $result .= join ", ", map {
+                   $ignoreCase eq 'true'
+                     ? ($expectedType eq 'Collection' or
+                        $expectedType eq 'List')
+                         ? "toLowerArray ($_)" : "lc ($_)"
+                     : $_
+                 } map {
+                   to_perl_value ($_)
+                 } (
+                   $expected,
+                   $node->getAttributeNS (undef, 'actual'),
+                 );
+      $result .= ");\n";
+    $Status->{Number}++;
+  } elsif ($ln eq 'assertTrue' or $ln eq 'assertFalse') {
+      my $condition;
       if ($node->hasAttributeNS (undef, 'actual')) {
-        $result .= perl_statement $ln . ' ('.
-                     perl_literal ($node->getAttributeNS (undef, 'id')).', '.
-                     perl_var (type => '$',
+        $condition = perl_var (type => '$',
                                local_name => $node->getAttributeNS
-                                                       (undef, 'actual')).
-                     ')';
+                                                       (undef, 'actual'));
         if ($node->hasChildNodes) {
           valid_err q<Child of $ln found but not supported>,
             node => $node;
         }
+      } elsif ($node->hasChildNodes) {
+        $condition = condition2code ($node);
       } else {
-        valid_err q<assertTrue w/o @actual not supported>,
-          node => $node;
+      valid_err $ln.q< w/o @actual not supported>, node => $node;
       }
-    } elsif ($ln eq 'assertNotNull') {
+      $result .= perl_statement $ln . ' ('.
+                     perl_literal ($node->getAttributeNS (undef, 'id')).', '.
+                     $condition. ')';
+    $Status->{Number}++;
+    } elsif ($ln eq 'assertNotNull' or $ln eq 'assertNull') {
       $result .= perl_statement $ln . ' (' .
                  perl_literal ($node->getAttributeNS (undef, 'id')).', '.
                  perl_var (type => '$',
@@ -141,6 +269,7 @@ sub node2code ($) {
         valid_err q<Child of $ln found but not supported>,
           node => $node;
       }
+    $Status->{Number}++;
   } elsif ($ln eq 'assertDOMException') {
     $Status->{use}->{'Message::Util::Error'} = 1;
     $result .= q[
@@ -164,11 +293,51 @@ sub node2code ($) {
         q[, $success);
       }
     ];
+    $Status->{Number}++;
+  } elsif ($ln eq 'contentType') {
+    $result .= '$builder->{contentType} eq '.
+               perl_literal ($node->getAttributeNS (undef, 'type'));
+    $Status->{our}->{builder} = 1;
+  } elsif ($ln eq 'if') {
+    my $children = $node->childNodes;
+    my $condition;
+    my $true = '';
+    for (my $i = 0; $i < $children->length; $i++) {
+      my $child = $children->item ($i);
+      if ($child->nodeType == $child->ELEMENT_NODE) {
+        if (not $condition) {
+          $condition = node2code ($child);
+        } elsif ($child->localName eq 'else') {
+          valid_err q<Multiple 'else's found>, node => $child
+            if $true;
+          $true = $result;
+          $result = '';
+        } else {
+          $result .= node2code ($child);
+        }
+      } else {
+        $result .= node2code ($child);
+      }
+    }
+    $result = perl_if
+                $condition,
+                $true || $result,
+                $true ? $result : undef;
+  } elsif ($ln eq 'or') {
+    $result .= condition2code ($node, join => 'or');
+  } elsif ($ln eq 'not') {
+    $result .= 'not '.condition2code ($node, join => 'nosupport');
+  } elsif ($ln eq 'notNull') {
+    $result .= 'defined '.
+               perl_var (type => '$',
+                         local_name => $node->getAttributeNS (undef, 'obj'));
   } else {
     valid_err q<Unknown element type: >.$ln;
   }
   $result;
 }
+
+our $result = '';
 
 my $input;
 {
@@ -176,6 +345,7 @@ my $input;
   $input = <>;
 }
 
+{
 my $dom = Message::DOM::DOMImplementationRegistry
             ->getDOMImplementation
                  ({Core => undef,
@@ -218,8 +388,16 @@ for (my $i = 0; $i < $child->length; $i++) {
         my $node = $md->item ($j);
         if ($node->nodeType == $node->ELEMENT_NODE) {
           my $ln = $node->localName;
-          if ($ln eq '...') {
-            
+          if ($ln eq 'title') {
+            $result .= perl_statement
+                         perl_assign
+                           '$Info->{Name}'
+                         => perl_literal $node->textContent;
+          } elsif ($ln eq 'description') {
+            $result .= perl_statement
+                         perl_assign
+                           '$Info->{Description}'
+                         => perl_literal $node->textContent;
           } else {
           #  valid_err q<Unknown element type: >.$ln,
           #    node => $node;
@@ -236,6 +414,11 @@ for (my $i = 0; $i < $child->length; $i++) {
             node => $node;
         }
       }
+    } elsif ($ln eq 'implementationAttribute') {
+      $result .= perl_comment
+                     sprintf 'Implementation attribute: @name=%s, @value=%s',
+                             $node->getAttributeNS (undef, 'name'),
+                             $node->getAttributeNS (undef, 'value');
     } else {
       $result .= node2code ($node);
     } 
@@ -251,6 +434,18 @@ for (my $i = 0; $i < $child->length; $i++) {
       node => $node;
   }
 }
+}
 
+my $pre = "#!/usr/bin/perl -w\nuse strict;\n";
+$pre .= perl_statement ('require '.perl_literal 'manakai/domtest.pl');
+$pre .= perl_statement
+            ('use Message::Util::Error')
+  if $Status->{use}->{'Message::Util::Error'};
+for (keys %{$Status->{our}}) {
+  $pre .= perl_statement perl_var type => '$', local_name => $_,
+                                  scope => 'our';
+}
+$pre .= perl_statement q<plan (>.(0+$Status->{Number}).q<)>;
 
-output_result $result;
+output_result $pre.$result;
+
