@@ -1,5 +1,9 @@
 2004-10-10  Wakaba  <wakaba@suika.fam.cx>
 
+	* domtest2perl.pl: New file.
+
+	* Makefile, mkdommemlist.pl: New files.
+
 	* dis2pm.pl, idl2dis.pl: New (moved from ../lib/Message/DOM/).
 
 	* genlib.pl: Removed (moved to ../lib/manakai/).
